# crl

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
crl/: __init__.py  bridge.py  cache.py  cli.py  crawler.py  deduplicator.py  extractor.py  fetcher.py  js_renderer.py  output.py  paginator.py  parser.py  progress.py  ratelimiter.py  relevance.py  robots.py  search.py  sitemap.py
tests/: test_bridge.py  test_crl.py  test_deep.py  test_features.py  test_new_features.py  test_structured.py
